--- a/html/index.html
+++ b/html/index.html
@@ -21,13 +21,27 @@
   </head>
   <body>
     <section class="hero__section">
+      <button class="mobile_btn">
+        <svg
+          width="24"
+          height="18"
+          viewBox="0 0 24 18"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M0 0H24V3H0V0ZM0 7.5H24V10.5H0V7.5ZM0 15H24V18H0V15Z"
+            fill="#404040"
+          />
+        </svg>
+      </button>
       <nav class="navigation">
         <ul class="nav__list">
           <li class="nav__list-item">
-            <a  class="nav__link" href="./"> Home </a>
+            <a class="nav__link" href="./"> Home </a>
           </li>
           <li class="nav__list-item">
-            <a  class="nav__link" href="/about"> About Me </a>
+            <a class="nav__link" href="/about"> About Me </a>
           </li>
           <li class="nav__list-item">
             <a class="nav__link" href="/gallery"> Gallery </a>
@@ -43,19 +57,110 @@
 
       <div class="inner-container">
         <div class="profile">
-          <h1 class="name">Hello,<br/>I am Paul Amusan</h1>
+          <h1 class="name">Hello,<br />I am Paul Amusan</h1>
           <p class="description">
-            Paul Amusan is a young, energetic, and talented fashion designer who focuses on his men’s clothing line, Paul Amusan. His work draws inspiration from local Nigerian fabrics coupled with Japanese tailoring designs. His designs are masculine, yet modern and trendy by way of transforming an ordinary look into a sophisticated design that embraces elegance.
+            Paul Amusan is a young, energetic, and talented fashion designer who
+            focuses on his men’s clothing line, Paul Amusan. His work draws
+            inspiration from local Nigerian fabrics coupled with Japanese
+            tailoring designs. His designs are masculine, yet modern and trendy
+            by way of transforming an ordinary look into a sophisticated design
+            that embraces elegance.
           </p>
-          <button class="btn">
-            Hire me
-          </button>
+          <button class="btn">Hire me</button>
         </div>
       </div>
+      <ul class="icon_list">
+        <li class="icon_listitem">
+          <a href="www.twitter.com">
+            <svg
+              width="24"
+              height="20"
+              viewBox="0 0 24 20"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M24 2.3085C23.1075 2.7 22.1565 2.9595 21.165 3.0855C22.185 2.4765 22.9635 1.5195 23.3295 0.366C22.3785 0.933 21.3285 1.3335 20.2095 1.557C19.3065 0.5955 18.0195 0 16.6155 0C13.8915 0 11.6985 2.211 11.6985 4.9215C11.6985 5.3115 11.7315 5.6865 11.8125 6.0435C7.722 5.844 4.1025 3.8835 1.671 0.897C1.2465 1.6335 0.9975 2.4765 0.9975 3.384C0.9975 5.088 1.875 6.5985 3.183 7.473C2.3925 7.458 1.617 7.2285 0.96 6.867C0.96 6.882 0.96 6.9015 0.96 6.921C0.96 9.312 2.6655 11.298 4.902 11.7555C4.5015 11.865 4.065 11.9175 3.612 11.9175C3.297 11.9175 2.979 11.8995 2.6805 11.8335C3.318 13.782 5.127 15.2145 7.278 15.261C5.604 16.5705 3.4785 17.3595 1.1775 17.3595C0.774 17.3595 0.387 17.3415 0 17.292C2.1795 18.6975 4.7625 19.5 7.548 19.5C16.602 19.5 21.552 12 21.552 5.499C21.552 5.2815 21.5445 5.0715 21.534 4.863C22.5105 4.17 23.331 3.3045 24 2.3085Z"
+                fill="#404040"
+              />
+            </svg>
+          </a>
+        </li>
+        <li class="icon_listitem">
+          <a class="icon_link" href="www.instagram.com">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </li>
+        <li class="icon_listitem">
+          <a href="www.youtube.com">
+            <svg
+              width="24"
+              height="18"
+              viewBox="0 0 24 18"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M24 8.62768C24 8.56875 24 8.50179 23.9973 8.42411C23.9946 8.20714 23.9893 7.96339 23.9839 7.70357C23.9625 6.95625 23.925 6.21161 23.8661 5.50982C23.7857 4.54286 23.6679 3.73661 23.5071 3.13125C23.3375 2.49951 23.0051 1.92334 22.543 1.46035C22.081 0.997351 21.5055 0.663739 20.8741 0.492857C20.1161 0.289286 18.6321 0.163393 16.5429 0.0857142C15.5491 0.0482142 14.4857 0.024107 13.4223 0.0107141C13.05 0.00535698 12.7045 0.00267857 12.3938 0H11.6062C11.2955 0.00267857 10.95 0.00535698 10.5777 0.0107141C9.51429 0.024107 8.45089 0.0482142 7.45714 0.0857142C5.36786 0.166071 3.88125 0.291964 3.12589 0.492857C2.49429 0.66332 1.91858 0.996791 1.45646 1.45985C0.994336 1.92291 0.662036 2.4993 0.492857 3.13125C0.329464 3.73661 0.214286 4.54286 0.133929 5.50982C0.075 6.21161 0.0375 6.95625 0.0160714 7.70357C0.00803567 7.96339 0.0053571 8.20714 0.00267853 8.42411C0.00267853 8.50179 0 8.56875 0 8.62768V8.77768C0 8.83661 -4.09782e-08 8.90357 0.00267853 8.98125C0.0053571 9.19822 0.0107142 9.44196 0.0160714 9.70179C0.0375 10.4491 0.075 11.1938 0.133929 11.8955C0.214286 12.8625 0.332143 13.6688 0.492857 14.2741C0.835714 15.5571 1.84286 16.5696 3.12589 16.9125C3.88125 17.1161 5.36786 17.242 7.45714 17.3196C8.45089 17.3571 9.51429 17.3813 10.5777 17.3946C10.95 17.4 11.2955 17.4027 11.6062 17.4054H12.3938C12.7045 17.4027 13.05 17.4 13.4223 17.3946C14.4857 17.3813 15.5491 17.3571 16.5429 17.3196C18.6321 17.2393 20.1188 17.1134 20.8741 16.9125C22.1571 16.5696 23.1643 15.5598 23.5071 14.2741C23.6705 13.6688 23.7857 12.8625 23.8661 11.8955C23.925 11.1938 23.9625 10.4491 23.9839 9.70179C23.992 9.44196 23.9946 9.19822 23.9973 8.98125C23.9973 8.90357 24 8.83661 24 8.77768V8.62768ZM22.0714 8.76697C22.0714 8.82322 22.0714 8.88482 22.0688 8.95714C22.0661 9.16607 22.0607 9.39643 22.0554 9.64554C22.0366 10.358 21.9991 11.0705 21.9429 11.7321C21.8705 12.5946 21.7687 13.3018 21.6429 13.7759C21.4768 14.3946 20.9893 14.8848 20.3732 15.0482C19.8107 15.1982 18.3938 15.3188 16.4679 15.3911C15.4929 15.4286 14.4429 15.4527 13.3955 15.4661C13.0286 15.4714 12.6884 15.4741 12.383 15.4741H11.617L10.6045 15.4661C9.55714 15.4527 8.50982 15.4286 7.53214 15.3911C5.60625 15.3161 4.18661 15.1982 3.62679 15.0482C3.01071 14.8821 2.52321 14.3946 2.35714 13.7759C2.23125 13.3018 2.12946 12.5946 2.05714 11.7321C2.00089 11.0705 1.96607 10.358 1.94464 9.64554C1.93661 9.39643 1.93393 9.16339 1.93125 8.95714C1.93125 8.88482 1.92857 8.82054 1.92857 8.76697V8.63839C1.92857 8.58214 1.92857 8.52054 1.93125 8.44821C1.93393 8.23929 1.93929 8.00893 1.94464 7.75982C1.96339 7.04732 2.00089 6.33482 2.05714 5.67321C2.12946 4.81071 2.23125 4.10357 2.35714 3.62946C2.52321 3.01071 3.01071 2.52054 3.62679 2.35714C4.18929 2.20714 5.60625 2.08661 7.53214 2.01429C8.50714 1.97679 9.55714 1.95268 10.6045 1.93929C10.9714 1.93393 11.3116 1.93125 11.617 1.93125H12.383L13.3955 1.93929C14.4429 1.95268 15.4902 1.97679 16.4679 2.01429C18.3938 2.08929 19.8134 2.20714 20.3732 2.35714C20.9893 2.52321 21.4768 3.01071 21.6429 3.62946C21.7687 4.10357 21.8705 4.81071 21.9429 5.67321C21.9991 6.33482 22.0339 7.04732 22.0554 7.75982C22.0634 8.00893 22.0661 8.24196 22.0688 8.44821C22.0688 8.52054 22.0714 8.58482 22.0714 8.63839V8.76697ZM9.61607 12.292L15.8304 8.67589L9.61607 5.11339V12.292Z"
+                fill="#404040"
+              />
+            </svg>
+          </a>
+        </li>
+      </ul>
     </section>
+
+    <!-- this is the second section -->
+
     <section>
-      <div class="inner-container">
-        this is the content of the second section
+      <div class="inner-container section_two-wrapper">
+        <aside class="image-wrapper">
+          <img
+          class="image"
+            src="https://res.cloudinary.com/dqw7jnfgo/image/upload/q_auto:good/v1663071824/random%20profile/autri-taheri-Vj2zHsZ1uqw-unsplash_1.png"
+          />
+        </aside>
+        <div>
+          <h3>About me</h3>
+          <p>
+            Paul Amusan is a young, energetic, and talented fashion designer who
+            focuses on his men’s clothing line, Paul Amusan. His work draws
+            inspiration from local Nigerian fabrics coupled with Japanese
+            tailoring designs. His designs are masculine, yet modern and trendy
+            by way of transforming an ordinary look into a sophisticated design
+            that embraces elegance.
+          </p>
+          <p>
+            I began acquired his love for fashion when he was a young boy where
+            he spent his time sketching and drawing. He loves to work with
+            colors, and his awesome talent has seen his pieces worn by famous
+            politicians and celebrities. Young and successful, he is a talented
+            fashion designer to watch out for as his name continues to cause
+            ripples in both the local and global fashion industries.
+          </p>
+          <p>
+            While in New York, I was employed in the Charivari Boutique where
+            president of the company, Barbara Weiser, noticed my potential and
+            passion for unique fashion and helped me launch my first fashion
+            collection. My passion for African fashion is profound. “Everything
+            begins for me with the print and fabric, which usually has some
+            shine,” exclaims Faturoti. My deep African roots, as well as
+            extensive global experience with having lived and worked in New York
+            and Milan have been instrumental in her success and international
+            spotlight.
+          </p>
+          <p>
+            While in New York, I was employed in the Charivari Boutique where
+            president of the company, Barbara Weiser, noticed my potential and
+            passion for unique fashion and helped me launch my first fashion
+            collection. My passion for African fashion is profound. “Everything
+            begins for me with the print and fabric, which usually has some
+            shine,” exclaims Faturoti. My deep African roots, as well as
+            extensive global experience with having lived and worked in New York
+            and Milan have been instrumental in her success and international
+            spotlight.
+          </p>
+        </div>
       </div>
     </section>
   </body>
