--- a/html/index.html
+++ b/html/index.html
@@ -110,6 +110,29 @@
       </ul>
     </section>
 
+<div class="inner-container">
+<div class="gallery">
+  <div class="gallery_items">
+    <img class="galler_img" src="https://images.pexels.com/photos/13008224/pexels-photo-13008224.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+  </div>
+  <div class="gallery_items">
+    <img class="galler_img" src="https://images.pexels.com/photos/13421007/pexels-photo-13421007.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+  </div>
+  <div class="gallery_items">
+    <img class="galler_img" src="https://images.pexels.com/photos/12463298/pexels-photo-12463298.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+  </div>
+  <div class="gallery_items">
+    <img class="galler_img" src="https://images.pexels.com/photos/7469433/pexels-photo-7469433.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+  </div>
+  <div class="gallery_items">
+    <img class="galler_img" src="https://images.pexels.com/photos/13384193/pexels-photo-13384193.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+  </div>
+  <div class="gallery_items">
+    <img class="galler_img" src="https://images.pexels.com/photos/13406218/pexels-photo-13406218.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" />
+  </div>
+</div>
+</div>
+
     <!-- this is the second section -->
 
     <section>
@@ -120,6 +143,7 @@
             src="https://res.cloudinary.com/dqw7jnfgo/image/upload/q_auto:good/v1663071824/random%20profile/autri-taheri-Vj2zHsZ1uqw-unsplash_1.png"
           />
         </aside>
+        
         <div>
           <h3>About me</h3>
           <p>
@@ -163,5 +187,7 @@
         </div>
       </div>
     </section>
+
+
   </body>
 </html>
